--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A webpack plugin for prebundling your vendors and common code on the fly. Powered by esbuild.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --runInBand"
   },
   "repository": {
     "type": "git",
